# RouletteBias-AwareAgent

./: .env.example  .gitignore  Dockerfile  README.md  claude_code_prompts.md  nixpacks.toml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 3c1548be7b9e_initial.py
docs/: DEPLOY.md
examples/: bias_demo.py  simulate.py  simulate_conversation.py
scripts/: run_dev.sh  start.sh
src/roulette_agent/: __init__.py  agent.py  app.py  belief.py  bias_detector.py  cli.py  hotspot_grid.py  layout.py  models.py  optimizer.py  settler.py  simulator.py  stats.py  tools.py
src/roulette_agent/static/: app.js  index.html  manifest.json  service-worker.js  style.css
tests/: test_agent.py  test_app.py  test_belief.py  test_bias_detector.py  test_hotspot_grid.py  test_layout.py  test_optimizer.py  test_settler.py  test_stats.py
