[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roulette-agent"
version = "0.1.0"
description = "Bias-aware roulette agent powered by Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.0",
    "scipy>=1.14.0",
    "numpy>=2.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roulette_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.envs.default]
features = ["dev"]
